--- a/src/InicioSesion.form
+++ b/src/InicioSesion.form
@@ -5,26 +5,30 @@
     <constraints>
       <xy x="20" y="20" width="560" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="8cb20" binding="correo" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="8cb20" binding="panelLoginContent" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="632ae" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Correo electronico"/>
+              <text value="Usuario"/>
             </properties>
           </component>
-          <component id="269a4" class="javax.swing.JTextField" binding="txtCorreo">
+          <component id="269a4" class="javax.swing.JTextField" binding="txtUsuario">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -32,15 +36,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="b71ba" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Contraseña"/>
-            </properties>
-          </component>
-          <component id="d0fc9" class="javax.swing.JTextField" binding="txtContraseña">
+          <component id="d0fc9" class="javax.swing.JPasswordField" binding="txtContraseña" custom-create="true">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -56,20 +52,20 @@
               <text value="Recordar contraseña"/>
             </properties>
           </component>
-          <component id="e0991" class="javax.swing.JButton" binding="siguienteButton" default-binding="true">
+          <component id="e0991" class="javax.swing.JButton" binding="siguienteButton">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Siguiente"/>
+              <text value="Ingresar"/>
             </properties>
           </component>
-          <component id="99911" class="javax.swing.JLabel">
+          <component id="4820d" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="Contraseña"/>
             </properties>
           </component>
         </children>
