--- a/src/Menu_Principal.form
+++ b/src/Menu_Principal.form
@@ -705,6 +705,7 @@
 
               <!-- PANEL ASISTENCIAS (se mantiene igual) -->
               <!-- PANEL ASISTENCIAS -->
+              <!-- PANEL ASISTENCIAS CORREGIDO -->
               <grid id="f1345" binding="panelExperiencia" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                   <margin top="0" left="0" bottom="0" right="0"/>
                   <constraints>
@@ -740,34 +741,34 @@
                                           </properties>
                                       </component>
 
-                                      <component id="labelCurso" class="javax.swing.JLabel">
+                                      <component id="e401" class="javax.swing.JLabel">
                                           <constraints>
                                               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                           </constraints>
                                           <properties>
-                                              <text value="Seleccionar Curso"/>
+                                              <text value="Nombre del Proyecto"/>
                                           </properties>
                                       </component>
 
-                                      <component id="comboCursosAsistencia" class="javax.swing.JComboBox" binding="comboCursosAsistencia">
+                                      <component id="967f0" class="javax.swing.JTextField" binding="textField2">
                                           <constraints>
-                                              <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                                              <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                                  <preferred-size width="150" height="-1"/>
+                                              </grid>
                                           </constraints>
-                                          <properties>
-                                              <model/>
-                                          </properties>
+                                          <properties/>
                                       </component>
 
-                                      <component id="labelFecha" class="javax.swing.JLabel">
+                                      <component id="b706a" class="javax.swing.JLabel">
                                           <constraints>
                                               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                           </constraints>
                                           <properties>
-                                              <text value="Fecha"/>
+                                              <text value="Fecha de Inicio"/>
                                           </properties>
                                       </component>
 
-                                      <component id="textFieldFecha" class="javax.swing.JTextField" binding="textFieldFecha">
+                                      <component id="51a76" class="javax.swing.JTextField" binding="textField3">
                                           <constraints>
                                               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                   <preferred-size width="150" height="-1"/>
@@ -776,18 +777,50 @@
                                           <properties/>
                                       </component>
 
-                                      <component id="btnAgregarFecha" class="javax.swing.JButton" binding="btnAgregarFecha">
+                                      <component id="30a19" class="javax.swing.JLabel">
                                           <constraints>
-                                              <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                           </constraints>
                                           <properties>
-                                              <text value="Agregar Fecha"/>
+                                              <text value="Fecha de Fin"/>
                                           </properties>
                                       </component>
 
+                                      <component id="3ab6f" class="javax.swing.JTextField" binding="textField4">
+                                          <constraints>
+                                              <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                                  <preferred-size width="150" height="-1"/>
+                                              </grid>
+                                          </constraints>
+                                          <properties/>
+                                      </component>
+
+                                      <component id="a412c" class="javax.swing.JLabel">
+                                          <constraints>
+                                              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                          </constraints>
+                                          <properties>
+                                              <text value="Tipo de Experiencia"/>
+                                          </properties>
+                                      </component>
+
+                                      <component id="7aa33" class="javax.swing.JComboBox" binding="comboBox5">
+                                          <constraints>
+                                              <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                                          </constraints>
+                                          <properties>
+                                              <model>
+                                                  <item value="Docencia"/>
+                                                  <item value="Investigación"/>
+                                                  <item value="Desarrollo"/>
+                                              </model>
+                                          </properties>
+                                      </component>
+
+                                      <!-- TABLA DE ASISTENCIAS -->
                                       <scrollpane id="scpAsistencias" binding="scpAsistencias">
                                           <constraints>
-                                              <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                                              <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                                                   <preferred-size width="-1" height="200"/>
                                               </grid>
                                           </constraints>
@@ -801,10 +834,11 @@
                                           </children>
                                       </scrollpane>
 
+                                      <!-- BOTONES DE ASISTENCIAS -->
                                       <grid id="botonesAsistencia" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                           <margin top="0" left="0" bottom="0" right="0"/>
                                           <constraints>
-                                              <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                              <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                                           </constraints>
                                           <properties>
                                               <background color="-1499540"/>
@@ -827,17 +861,9 @@
                                                       <text value="Limpiar"/>
                                                   </properties>
                                               </component>
-                                              <component id="btnReporteAsistencia" class="javax.swing.JButton" binding="btnReporteAsistencia">
-                                                  <constraints>
-                                                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                                                  </constraints>
-                                                  <properties>
-                                                      <text value="Generar Reporte"/>
-                                                  </properties>
-                                              </component>
                                               <component id="btnRegresarAsistencia" class="javax.swing.JButton" binding="btnRegresarAsistencia">
                                                   <constraints>
-                                                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                                   </constraints>
                                                   <properties>
                                                       <text value="Regresar"/>
